--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+    <p class="current-player">Current Player: <span id="currentPlayer">X</span></p>
     <div class="board">
         <div class="row">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box" onclick="selectBox(0)"></div>
+            <div class="box" onclick="selectBox(1)"></div>
+            <div class="box" onclick="selectBox(2)"></div>
         </div>
         <div class="row">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box" onclick="selectBox(3)"></div>
+            <div class="box" onclick="selectBox(4)"></div>
+            <div class="box" onclick="selectBox(5)"></div>
         </div>
         <div class="row">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box" onclick="selectBox(6)"></div>
+            <div class="box" onclick="selectBox(7)"></div>
+            <div class="box" onclick="selectBox(8)"></div>
         </div>
     </div>
+    <button class="reset-btn" onclick="resetBoard()">Reset Game</button>
     
     <script src="script.js"></script>
 </body>
